# rip-video

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  minutes.model
src/: banner.rs  keyboard.rs  main.rs  ui.rs
src/worker/: audio_split.rs  download.rs  minutes.rs  mod.rs  summary.rs  transcribe.rs
