[package]
name = "rip-video"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
crossterm = "0.27"

[features]
markdown = ["dep:tui-markdown"]

[dependencies.tui-markdown]
version = "0.3.5"
optional = true
tui-markdown = "0.3.5"

 
