[package]
name = "rip-video"
version = "0.1.0"
edition = "2024"
description = "Terminal UI pipeline to download media audio, transcribe it with ffmpeg-whisper, and generate minutes locally."
license = "MIT"
repository = "https://github.com/syzer/rip-video"
homepage = "https://github.com/syzer/rip-video"
documentation = "https://docs.rs/rip-video"
readme = "README.md"
keywords = ["tui", "transcription", "yt-dlp", "whisper", "ollama"]
categories = ["command-line-utilities", "multimedia::audio", "multimedia::video"]
exclude = [
    "/audio.m4a",
    "/audio.bak.m4a",
    "/live.txt",
    "/live.gpu.txt",
    "/minutes.model",
    "/minutes.md",
    "/parts10/**",
    "/transcript.txt",
    "/transcript.bak.txt",
    "/target/**",
]

[dependencies]
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
crossterm = "0.27"
clap = { version = "4.5", features = ["derive"] }

[features]
markdown = ["dep:tui-markdown"]

[dependencies.tui-markdown]
version = "0.3.5"
optional = true

 
